Add Dockerfile for backend deployment